--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
     <title>React App</title>
-    <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
+    <script
+      type="text/javascript"
+      src="https://sandbox.web.squarecdn.com/v1/square.js"
+    ></script>
     <link rel="stylesheet" type="text/css" href="mysqpaymentform.css" />
     <script id="react-dotenv" src="./env.js"></script>
   </head>
