--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-    <title>React App</title>
+    <title>FOF</title>
     <script
       type="text/javascript"
       src="https://sandbox.web.squarecdn.com/v1/square.js"
